style: change container padding and cta hover

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -7,7 +7,7 @@
     <!-- BODY BACKGROUND -->
     <div class="w-screen h-full bg-gray-100">
         <!-- OVERALL CONTAINER -->
-        <div class="container relative h-full px-5 pt-16 mx-auto">
+        <div class="container relative h-full px-5 py-16 mx-auto">
             <div class="relative z-30 mb-12">
                 <h1 class="text-3xl font-bold text-center text-text">Book a flight</h1>
                 <p class="text-lg text-center text-text">We can bring you anywhere!*</p>
@@ -19,7 +19,7 @@
                      alt="Backdrop image showing illustrated airplanes sweeping across the background with short dashed lines trailing from behind in a smooth arc">
             </div>
             <!-- OUTER CONTAINER FOR FORM -->
-            <div class="container relative flex items-center h-auto p-8 mx-auto mb-8 bg-white rounded-3xl drop-shadow-lg">
+            <div class="container relative flex items-center h-auto p-8 mx-auto bg-white rounded-3xl drop-shadow-lg">
                 <!-- FORM CONTRAINER -->
                 <div class="container mx-auto">
                     <form action="{% url 'search-results' %}" method="get" autocomplete="off">
@@ -141,7 +141,7 @@
                                        value="Search Flights"
                                        name="submit"
                                        id="submit"
-                                       class="flex items-center justify-center h-12 col-span-4 px-6 font-bold text-center text-white rounded-full sm:col-span-2 md:col-span-1 bg-primary py-auto drop-shadow-sm cursor-pointer hover:scale-[103%] transition-all"
+                                       class="flex items-center justify-center h-12 col-span-4 px-6 font-bold text-center text-white rounded-full sm:col-span-2 md:col-span-1 bg-primary py-auto drop-shadow-sm cursor-pointer hover:scale-[103%] transition-all hover:bg-[#FB257F]"
                                        aria-label="Search flights">
                             </div>
                         </div>
