--- a/templates/core/passenger-details.html
+++ b/templates/core/passenger-details.html
@@ -110,7 +110,7 @@
     <!-- MAIN CONTENT -->
     <div class="container relative flex-1 flex-grow px-5 mx-auto">
         <h1 class="mt-8 text-3xl font-bold text-text">Passenger Details</h1>
-        <form action="" method="post">
+        <form method="post">
             {% csrf_token %}
             <!-- HIDDEN INPUT TO STORE NUM PASSENGERS -->
             <input type="hidden"
