--- a/templates/users/register.html
+++ b/templates/users/register.html
@@ -105,14 +105,14 @@
                         </div>
                         <!-- PASSWORD INSTRUCTIONS -->
                         <div class="p-4">
-                            <span class="text-xs text-gray-700">
+                            <div class="text-xs text-gray-700">
                                 <ul class="list-disc">
                                     <li>Your password can’t be too similar to your other personal information.</li>
                                     <li>Your password must contain at least 8 characters.</li>
                                     <li>Your password can’t be a commonly used password.</li>
                                     <li>Your password can’t be entirely numeric.</li>
                                 </ul>
-                            </span>
+                            </div>
                         </div>
                         <!-- SUBMIT BUTTON -->
                         <button type="submit"
