--- a/templates/partials/passengers-edit.html
+++ b/templates/partials/passengers-edit.html
@@ -1,6 +1,6 @@
 <!-- GET REQUEST MEANS USERS WANTS TO EDIT - SHOW EDIT FORM -->
 {% if request.method == 'GET' %}
-    <form action="" class="max-w-[400px]" hx-target="this" hx-swap="outerHTML">
+    <form class="max-w-[400px]" hx-target="this" hx-swap="outerHTML">
         <div class="flex items-center justify-between w-full">
             <p class="text-xl font-bold text-primary">Passengers</p>
             <div class="flex justify-end w-full gap-2">
