--- a/templates/partials/flights.html
+++ b/templates/partials/flights.html
@@ -67,7 +67,7 @@
         </div>
         <!-- IF THERE'S NO FLIGHTS ON SELECTED DATE -->
         {% if not flight_results %}
-            <div class="flex flex-col justify-center text-center border-[1px] border-gray-300 rounded-3xl px-8 py-16 mt-6">
+            <div id="error-{{leg}}" class="flex flex-col justify-center text-center border-[1px] border-gray-300 rounded-3xl px-8 py-16 mt-6">
                 <p class="text-2xl font-bold text-primary">Oops!</p>
                 <p class="text-lg font-semibold text-text">Looks like there's no flights on that date. Please pick another date.</p>
             </div>
