--- a/templates/core/bookings-detail.html
+++ b/templates/core/bookings-detail.html
@@ -57,8 +57,8 @@
         <!-- PASSENGERS -->
         <div hx-target="this" hx-swap="outerHTML" class="max-w-[400px]">
             <div class="flex items-center justify-between">
-                <h3 class="text-xl font-bold text-primary">Passengers</h3>
-                <button class="rounded-full py-2 px-4 border-[1px] border-primary hover:bg-primary hover:text-white transition-all duration-300"
+                <h3 class="py-2 text-xl font-bold text-primary">Passengers</h3>
+                <button id="edit-button" class="rounded-full py-2 px-4 border-[1px] border-primary hover:bg-primary hover:text-white transition-all duration-300"
                         hx-get="/bookings/detail/edit/{{ booking.id }}"
                         aria-label="Edit passengers">Edit Passengers</button>
             </div>
