--- a/templates/blog/blog-detail.html
+++ b/templates/blog/blog-detail.html
@@ -7,7 +7,7 @@
     <!-- COVER IMAGE -->
     <div class="relative flex items-center w-screen overflow-hidden sm:max-h-80">
         <div class="absolute w-full h-full opacity-50 bg-gradient-to-r from-40% from-primary to-fuchsia-500"></div>
-        <img class="object-cover w-full h-full" src="{{ post.cover_image.url }}">
+        <img class="object-cover w-full h-full" src="{{ post.cover_image.url }}" alt="{{post.alt_text}}">
         <h1 class="container absolute px-5 text-xl font-bold text-center text-white -translate-x-1/2 sm:text-4xl left-1/2">
             {{ post.title }}
         </h1>
@@ -24,7 +24,7 @@
                 {% for post in more_posts %}
                     <div class="flex flex-col p-6 transition-all duration-300 ease-in-out bg-white shadow-sm hover:scale-[1.03] hover:shadow-xl sm:p-8 rounded-3xl">
                         <div class="relative overflow-hidden rounded-xl">
-                            <img src="{{ post.cover_image.url }}"
+                            <img src="{{ post.cover_image.url }}" alt="{{post.alt_text}}"
                                  class="object-cover object-top w-full h-64 transition duration-500 group-hover:scale-105" />
                         </div>
                         <div class="flex flex-col justify-between flex-grow mt-6">
