--- a/templates/blog/blog.html
+++ b/templates/blog/blog.html
@@ -8,7 +8,8 @@
     <div class="relative flex items-center w-screen overflow-hidden sm:max-h-80">
         <div class="absolute w-full h-full opacity-50 bg-gradient-to-r from-40% from-primary to-fuchsia-500"></div>
         <img class="object-cover w-full h-full"
-             src="{% static 'img/blog-cover.webp' %}">
+             src="{% static 'img/blog-cover.webp' %}"
+             alt="view out of an aircraft window soaring above the clouds">
         <h1 class="container absolute px-5 text-xl font-bold text-center text-white -translate-x-1/2 sm:text-4xl left-1/2">
             Discover your next adventure
         </h1>
@@ -23,6 +24,7 @@
                         <div class="flex flex-col p-6 transition-all duration-300 ease-in-out bg-white shadow-sm hover:scale-[1.03] hover:shadow-xl sm:p-8 rounded-3xl">
                             <div class="relative overflow-hidden rounded-xl">
                                 <img src="{{ post.cover_image.url }}"
+                                     alt="{{ post.alt_text }}"
                                      class="object-cover object-top w-full h-64 transition duration-500 group-hover:scale-105" />
                             </div>
                             <div class="flex flex-col justify-between flex-grow mt-6">
