--- a/templates/core/checkout.html
+++ b/templates/core/checkout.html
@@ -4,7 +4,7 @@
     Checkout
 {% endblock title %}
 {% block content %}
-    <div class="container h-full px-5 mx-auto mt-12">
+    <div class="container h-full px-5 pb-12 mx-auto mt-12">
         <div class="grid grid-cols-1 gap-10 lg:grid-cols-2">
             <div class="col-span-1 p-6 border-2 rounded-3xl">
                 <!-- ORDER SUMMARY -->
